pod-appjs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appjs-pod
  labels:
    app: web
    version: "1.15"
spec:
  containers:
    - name: appjs-container
      image: smlinux/appjs
      ports:
        - containerPort: 80
