appjs-ep.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: appjs-svc
subsets:
  - addresses:
    - ip: 10.44.0.4
    - ip: 10.42.0.4
    - ip: 10.43.128.7
    ports:
      - port: 8080
