appjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-service
spec:
  type: ClusterIP
  selector:
    app: appjs
  ports:
    - port: 80
      targetPort: 8080
